add java exports to stargate extension cmd line